--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,10 +38,11 @@ add_executable(calculator
         src/services/wsPriceStream/PriceWs.h
         src/utils/logger/Logger.cpp
         src/utils/logger/Logger.h
-        src/services/priceService/PriceService.cpp
-        src/services/priceService/PriceService.h
-        src/services/binanceService/BinanceService.cpp
-        src/services/binanceService/BinanceService.h
+        src/services/streamService/BinanceStreamService.cpp
+        src/services/streamService/BinanceStreamService.h
+        src/services/restAPIService/BinanceAPIService.cpp
+        src/services/restAPIService/BinanceAPIService.h
+#        libs/sha256/hmac_sha256.h libs/sha256/hmac_sha256.c libs/sha256/sha256.h libs/sha256/sha256.c
         )
 
 target_link_libraries(calculator CppKafka::cppkafka)
@@ -61,8 +62,9 @@ target_include_directories(calculator PUBLIC ${REDIS_PLUS_PLUS_HEADER})
 find_library(REDIS_PLUS_PLUS_LIB redis++)
 target_link_libraries(calculator ${REDIS_PLUS_PLUS_LIB})
 
-set(OPENSSL_USE_STATIC_LIBS TRUE)
+find_package(PkgConfig REQUIRED)
+pkg_search_module(OPENSSL REQUIRED openssl)
 find_package(OpenSSL REQUIRED)
-
-add_executable(calculator ${SOURCE_FILES})
-target_link_libraries(calculator OpenSSL::Crypto)
+if (OPENSSL_FOUND)
+    set(HTTPLIB_IS_USING_OPENSSL TRUE)
+endif ()
